Support running on Java 17 #10145