@@ -2,7 +2,7 @@ package com.enonic.xp.script.impl.value;
 
 import javax.script.Bindings;
 
-import jdk.nashorn.api.scripting.JSObject;
+import org.openjdk.nashorn.api.scripting.JSObject;
 
 import com.enonic.xp.script.ScriptValue;
 import com.enonic.xp.script.impl.util.ErrorHelper;
